[package]
name = "nettransfer-server"
version = "0.2.0"
edition = "2021"
authors = ["Antxiko Gorjon <antxiko@gmail.com>"]
description = "Server side of MSX Net Transfer — share files from your PC to a real MSX over the network"
license-file = "../LICENSE"

[lib]
name = "nettransfer_server"
path = "src/lib.rs"

[[bin]]
name = "nthttp"
path = "src/main.rs"

[[bin]]
name = "nthttp-gui"
path = "src/bin/gui.rs"

[dependencies]
# Solo GUI las usa — el binario CLI no las arrastra a runtime (LTO las strippa).
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
rfd = "0.15"

[profile.release]
opt-level = 3
lto = true
strip = true
